# State_Machine_Cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/: config.h  iStates.h  stateMgr.h  states.h
scripts/: build.sh  test.sh
src/: main.cpp  stateMgr.cpp  states.cpp
test/: CMakeConfig.cmake  CMakeLists.txt  Dockerfile  docker-compose.yml  main_test.cpp
test/stateMachine/: Test_StateMgr_Mock.cpp  Test_StateMgr_Mock.h  Test_StateMgr_Stubs.h  stateMachine_test.cpp
